# OpenMedImgDataVal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
docs/: README.md
mri-seg/: BRAINSEG.ipynb  pyproject.toml
prototype/: demo.ipynb  prototype.ipynb  pyproject.toml  requirements.txt
