[tool.uv.workspace]
members = ["prototype"]

[project]
name = "openmedimgdataval"
version = "0.1.0"
description = "Context-Aware and Efficient Data Valuation for Medical Machine Learning"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.10",
    "pre-commit==3.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
]
ignore = ["N812"]
