[project]
name = "mri-seg"
version = "0.1.0"
description = "Brain tumor segmentation using MRI (BraTS dataset)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tensorflow>=2.13.0",
    "nibabel>=5.0.0",
    "kagglehub>=0.1.0",
    "scikit-learn>=1.3.0",
]
